# GroupViT

./: .gitignore  README.md  main.py  main_group_vit.py  main_seg.py  pyproject.toml  run.sh  run_all.sh  run_all_cotrain.sh
benchmarks_causal_rbo_20260506_133354/: summary.txt
benchmarks_sim_20260506_131852/: summary.txt
graph_vit_project/: main.py  main_cotrain.py  models.py  run.sh
groupvit/: pyproject.toml.old
groupvit_project/: main.py  pyproject.toml
models/: builder.py  group_vit.py
utils/: checkpoint.py
